# simple_blog_service

./: .gitignore  Cargo.toml  Rocket.toml
src/: main.rs
src/user/: auth.rs  config.rs  meta.rs  mod.rs
templates/: base.html.tera  index.html.tera  login.html.tera  nav.html.tera
