[package]
name = "blog_service"
version = "0.1.0"
authors = ["Evgeniy Polyakov <zbr@ioremap.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.1", features = ["secrets"]}

[dependencies.rocket_dyn_templates]
features = ["tera"]
