[package]
name = "blog_service"
version = "0.1.0"
authors = ["Evgeniy Polyakov <zbr@ioremap.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "*"
rocket = {version = "0.5.0-rc.1", features = ["secrets"]}
rust-crypto = "*"
serde_json = "1.0"
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"

[dependencies.rocksdb]
features = ["multi-threaded-cf"]

[dependencies.rocket_dyn_templates]
features = ["tera"]
